# autoEDA

./: .gitignore  LICENSE  README.md  __init__.py  functional_audit.py  generate_sensor_data.py  pyproject.toml  requirements.txt  sample.csv  sample_sensor.csv  sample_sensor2.csv  test.parquet  train.parquet
autoeda_plus/: __init__.py  pyproject.toml
autoeda_plus/analysis/: correlation_engine.py  feature_engineering.py  outlier_detector.py  statistics_engine.py
autoeda_plus/cleaning/: __init__.py  data_cleaner.py
autoeda_plus/cli/: autoeda.py
autoeda_plus/core/: data_loader.py  data_profiler.py  eda_pipeline.py  schema_detector.py
autoeda_plus/insights/: insight_generator.py
autoeda_plus/ml/: anomaly_detector.py  baseline_models.py  model_evaluator.py  model_selector.py  model_trainer.py
autoeda_plus/notebook/: anomaly_notebook_builder.py  notebook_builder.py
autoeda_plus/visualization/: plot_engine.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
cli/: __init__.py  autoeda.py
core/: __init__.py  data_loader.py  eda_analyzer.py  feature_detector.py
example_output/: example_output.ipynb
nb_builder/: __init__.py  notebook_builder.py
output/: EDA_91mobiles.ipynb  EDA_laptopData.ipynb  EDA_sample.ipynb  best_model.joblib  feature_pipeline.joblib  submission.csv
visualization/: __init__.py  plot_generator.py
